--- a/style.css
+++ b/style.css
@@ -35,7 +35,12 @@ padding: auto;
     color: rgb(3, 3, 3);
     padding: 50px;
 }
+#ulearnlogo{
+margin-left: 0%;
 
+
+    
+}
 .blues-theme {
     background-color: #083650;
     color: rgb(241, 232, 232);
