--- a/style.css
+++ b/style.css
@@ -1,65 +1,68 @@
 body {
-    margin: 0;
-    font-family: 'Arial', sans-serif;
+  margin: 0;
+  font-family: 'Arial', sans-serif;
+}
+a {
+  text-decoration: none;
 }
 
 nav {
-    background-color: #9ecae4;
-    color: white;
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: #9ecae4;
+  color: white;
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 nav ul {
-    list-style-type: none;
-    display: flex;
+  list-style-type: none;
+  display: flex;
 }
 
 nav ul li {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 nav a {
-    text-decoration: none;
-    color: rgb(14, 13, 13);
+  text-decoration: none;
+  color: rgb(14, 13, 13);
 }
-.header{
-
-padding: auto;
+.header {
+  padding: auto;
 }
 
 .blue-theme {
-    background-color: #eaedee;
-    color: rgb(3, 3, 3);
-    padding: 50px;
+  background-color: #eaedee;
+  color: rgb(3, 3, 3);
+  padding: 50px;
 }
-#ulearnlogo{
-margin-left: 0%;
-
-
-    
+#ulearnlogo {
+  margin-left: 0%;
 }
 .blues-theme {
-    background-color: #083650;
-    color: rgb(241, 232, 232);
-    padding: 50px;
+  background-color: #083650;
+  color: rgb(241, 232, 232);
+  padding: 50px;
 }
 .events-section {
-    padding: 50px;
+  padding: 50px;
 }
 
 .event-tiles-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .event-tile {
-    width: 95%;
-    margin: 10px;
-    padding: 20px;
-    border: 1px solid #fcf7f7;
-    background-color: hsl(217, 89%, 64%);
+  width: 95%;
+  margin: 10px;
+  padding: 20px;
+  border: 1px solid #fcf7f7;
+  border-radius: 1rem;  
+  background-color: hsl(217, 89%, 64%);
+}
+footer {
+  background-color: #9ecae4;
 }
